--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,35 @@
 *.lai
 *.la
 *.a
+
+# Perl
+blib/
+.build/
+_build/
+cover_db/
+inc/
+Build
+Build.bat
+.last_cover_stats
+Makefile
+Makefile.old
+MANIFEST.bak
+META.yml
+MYMETA.yml
+nytprof.out
+pm_to_blib
+
+# Other
+ttd-emscripten/
+.metadata/
+eclipse-workspace/
+emcc-build/
+erlide.log
+etc/preload/
+gcc-build/
+openttd-*
+rpc_monitor-20120823_221639.dump
+slow-fun
+svn-ttd/
+ttd-source/
+workspace/
