Moving to dance floor

--- a/PlayTTD-Web/config.yml
+++ b/PlayTTD-Web/config.yml
@@ -18,12 +18,9 @@ charset: "UTF-8"
 # simple: default and very basic template engine
 # template_toolkit: TT
 
-template: "simple"
+# template: "simple"
 
-# template: "template_toolkit"
-# engines:
-#   template_toolkit:
-#     encoding:  'utf8'
-#     start_tag: '[%'
-#     end_tag:   '%]'
-
+template: "template_toolkit"
+engines:
+  template_toolkit:
+    encoding:  'utf8'
