Optimize for search

--- a/PlayTTD-Web/config.yml
+++ b/PlayTTD-Web/config.yml
@@ -18,7 +18,7 @@ analytics: "UA-32891320-1"
 title: "Transport Tycoon Deluxe Online"
 
 # Description
-description: "PlayTTD is an open source browser game based upon Transport Tycoon Deluxe."
+description: "This is a open-source recreation of the Transport Tycoon Deluxe. Game is HTML5 compliant and can be run on every major browser."
 
 # Keywords
 keywords: "PlayTTD,play ttd,TTD,Transport Tycoon Deluxe,game,browser,online,play"
