--- a/PlayTTD-Web/config.yml
+++ b/PlayTTD-Web/config.yml
@@ -14,6 +14,9 @@ folder: "play-ttd/"
 # Google analytics
 analytics: "UA-32891320-1"
 
+# Google adsense banner
+adsense: "4003706169"
+
 # Yandex metrika
 metrika: 20958994
 
